examples/errors/error_invalid_modifier.cay
// Error测试：无效修饰符
public class TestInvalidModifier {
    public static native void main() {
        println("Hello");
    }
}
